--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            ${{ env.GitVersion_FullSemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -123,7 +123,7 @@ jobs:
           echo "LegacySemVerPadded: ${{ env.GitVersion_LegacySemVerPadded }}"
           echo "AssemblySemVer: ${{ env.GitVersion_AssemblySemVer }}"
           echo "AssemblySemFileVer: ${{ env.GitVersion_AssemblySemFileVer }}"
-          echo "FullSemVer: ${{ env.GitVersion_FullSemVer }}"
+          echo "FullSemVer:  ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}"
           echo "InformationalVersion: ${{ env.GitVersion_InformationalVersion }}"
           echo "BranchName: ${{ env.GitVersion_BranchName }}"
           echo "EscapedBranchName: ${{ env.GitVersion_EscapedBranchName }}"
@@ -148,7 +148,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            ${{ env.GitVersion_FullSemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
