--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -42,10 +42,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           labels: |
-            org.opencontainers.image.version= ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
+            org.opencontainers.image.version=  ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
             nightly
-            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -68,7 +68,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             nightly
-            ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
@@ -156,10 +156,10 @@ jobs:
           images: ${{ env.REGISTRY_IMAGE }}
           labels: |
             org.opencontainers.image.description=Stream Master Docker Image
-            org.opencontainers.image.version= ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
+            org.opencontainers.image.version=  ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
             nightly
-            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_SemVer }}
+             ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
