--- a/.github/workflows/Nightly_Publish_Docker.yml
+++ b/.github/workflows/Nightly_Publish_Docker.yml
@@ -44,6 +44,7 @@ jobs:
           labels: |
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
+            nightly
             ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
@@ -154,6 +155,7 @@ jobs:
             org.opencontainers.image.description=Stream Master Docker Image
             org.opencontainers.image.version=${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
           tags: |
+            nightly
             ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
