--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -27,7 +27,9 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "babel-plugin-react-intl": "^8.2.25",
     "eslint-config-canonical": "^40.0.9",
+    "formatjs": "^0.1.1",
     "history": "^5.3.0",
     "import": "^0.0.6",
     "normalize.css": "^8.0.1",
@@ -38,6 +40,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.4.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
@@ -51,6 +54,9 @@
     "web-vitals": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@formatjs/cli": "^6.1.1",
     "@rtk-query/codegen-openapi": "^1.0.0",
     "@svgr/webpack": "^6.5.1",
     "@types/react": "^18.2.6",
@@ -62,6 +68,8 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-canonical": "^4.2.2",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "extract-react-intl-messages": "^4.1.1",
+    "simplejson": "^0.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
@@ -74,8 +82,14 @@
   "name": "streammaster",
   "private": true,
   "scripts": {
+    "babel-extract-messages": "NODE_ENV=production babel src --out-dir build --plugins=babel-plugin-react-intl",
     "build": "react-scripts build",
+    "compile": "formatjs compile",
     "eject": "react-scripts eject",
+    "extract": "formatjs extract src/**/*.ts* --out-file en.json --id-interpolation-pattern [sha512:contenthash:base64:6]",
+    "extract1": "formatjs extract \"src/**/*.ts*\" --ignore='**/*.d.ts' --out-file en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
+    "extract2": "formatjs extract",
+    "i18n": "extract-messages -l=en -o src/lang -d en \"src/**/*.ts*\"",
     "lint": "eslint ./src/**/*.ts ./src/**/*.tsx",
     "start": "react-scripts start",
     "test": "react-scripts test"
