--- a/.github/workflows/Test_Publish_Docker.yml
+++ b/.github/workflows/Test_Publish_Docker.yml
@@ -1,4 +1,4 @@
-name: Manual Publish Docker Latest
+name: Test Publish Docker
 on:
   workflow_dispatch:
 
@@ -41,8 +41,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            latest
-            ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -149,8 +148,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            latest
-            ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
