--- a/streammasterwebui/.eslintrc.json
+++ b/streammasterwebui/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "ignorePatterns": [
-    "iptvApi.ts"
+    "iptvApi.ts",
+    "epg.tsx",
+    "channels.tsx"
   ],
   "env": {
     "browser": true,
