--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^18.16.16",
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
+    "@vidstack/react": "^0.6.5",
     "axios": "^1.4.0",
     "babel-plugin-react-intl": "^8.2.25",
     "eslint-config-canonical": "^40.0.9",
@@ -51,6 +52,7 @@
     "redux-thunk": "^2.4.2",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
+    "vidstack": "^0.6.5",
     "web-vitals": "^3.3.2"
   },
   "devDependencies": {
