--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -31,6 +31,7 @@
     "eslint-config-canonical": "^40.0.9",
     "formatjs": "^0.1.1",
     "history": "^5.3.0",
+    "hls.js": "^1.4.5",
     "import": "^0.0.6",
     "normalize.css": "^8.0.1",
     "planby": "^1.1.4",
@@ -52,6 +53,7 @@
     "redux-thunk": "^2.4.2",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
+    "video.js": "^8.3.0",
     "vidstack": "^0.6.5",
     "web-vitals": "^3.3.2"
   },
